--- a/.github/workflows/package-Instrumentation.EntityFrameworkCore.yml
+++ b/.github/workflows/package-Instrumentation.EntityFrameworkCore.yml
@@ -33,7 +33,7 @@ jobs:
       run: dotnet build src/${{env.PROJECT}} --configuration Release --no-restore -p:Deterministic=true
 
     - name: dotnet test ${{env.PROJECT}}
-      run: dotnet test test/${{env.PROJECT}}
+      run: dotnet test test/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCoreTests
 
     - name: dotnet pack ${{env.PROJECT}}
       run: dotnet pack src/${{env.PROJECT}} --configuration Release --no-build
