--- a/NuGet.config
+++ b/NuGet.config
@@ -3,6 +3,7 @@
   <packageSources>
     <clear />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+    <add key="MyGet" value="https://www.myget.org/F/opentelemetry/api/v3/index.json" />
   </packageSources>
   <disabledPackageSources />
 </configuration>
