--- a/test/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.Tests/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.Tests/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.Tests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <Description>Unit test project for OpenTelemetry Elasticsearch client instrumentation</Description>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <IncludeSharedTestSource>true</IncludeSharedTestSource>
   </PropertyGroup>
 
   <ItemGroup>
