--- a/src/OpenTelemetry.Contrib.Instrumentation.Wcf/OpenTelemetry.Contrib.Instrumentation.Wcf.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Wcf/OpenTelemetry.Contrib.Instrumentation.Wcf.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
     <Description>OpenTelemetry instrumentation for WCF</Description>
     <PackageTags>$(PackageTags);distributed-tracing;WCF</PackageTags>
-    <MinVerTagPrefix>wcf-</MinVerTagPrefix>
+    <MinVerTagPrefix>Instrumentation.Wcf-</MinVerTagPrefix>
   </PropertyGroup>
 
   <ItemGroup>
