--- a/.github/workflows/package-Instrumentation.Elasticsearch.yml
+++ b/.github/workflows/package-Instrumentation.Elasticsearch.yml
@@ -9,7 +9,7 @@ on:
         default: 'warning'
   push:
     tags:
-      - 'Instrumentation.Elasticsearch-*' # trigger when we create a tag with prefix "Instrumentation.Elasticsearch-"
+      - 'Instrumentation.ElasticsearchClient--*' # trigger when we create a tag with prefix "Instrumentation.ElasticsearchClient-"
 
 jobs:
   build-test-pack:
