--- a/.github/workflows/package-Instrumentation.Elasticsearch.yml
+++ b/.github/workflows/package-Instrumentation.Elasticsearch.yml
@@ -1,4 +1,4 @@
-name: Pack OpenTelemetry.Contrib.Instrumentation.Elasticsearch
+name: Pack OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient
 
 on:
   workflow_dispatch:
@@ -9,13 +9,13 @@ on:
         default: 'warning'
   push:
     tags:
-      - 'Instrumentation.Elasticsearch-*' # trigger when we create a tag with prefix "Instrumentation.Elasticsearch-"
+      - 'Instrumentation.ElasticsearchClient-*' # trigger when we create a tag with prefix "Instrumentation.ElasticsearchClient-"
 
 jobs:
   build-test-pack:
     runs-on: ${{ matrix.os }}
     env:
-      PROJECT: OpenTelemetry.Contrib.Instrumentation.Elasticsearch
+      PROJECT: OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient
 
     strategy:
       matrix:
