--- a/src/OpenTelemetry.Contrib.Exporter.Elastic/OpenTelemetry.Contrib.Exporter.Elastic.csproj
+++ b/src/OpenTelemetry.Contrib.Exporter.Elastic/OpenTelemetry.Contrib.Exporter.Elastic.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Elastic APM .NET Exporter for OpenTelemetry.</Description>
+    <PackageTags>$(PackageTags);Elastic;APM;Observability;distributed-tracing</PackageTags>
+    <MinVerTagPrefix>Exporter.Elastic-</MinVerTagPrefix>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
     <PackageReference Include="OpenTelemetry" Version="1.1.0-beta2" />
   </ItemGroup>
-
 
 </Project>
