--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,6 +1,7 @@
 <Project>
   <Import Project="..\Directory.Build.targets" Condition="Exists('..\Directory.Build.targets')" />
-  
+  <Import Project="$(RepoRoot)\build\Common.targets" />
+
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="$(MicrosoftSourceLinkGitHubPkgVer)">
       <PrivateAssets>all</PrivateAssets>
