--- a/test/OpenTelemetry.Contrib.Instrumentation.MySqlData.Tests/OpenTelemetry.Contrib.Instrumentation.MySqlData.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.MySqlData.Tests/OpenTelemetry.Contrib.Instrumentation.MySqlData.Tests.csproj
@@ -16,6 +16,7 @@
         </PackageReference>
         <DotNetCliToolReference Include="dotnet-xunit" Version="$(DotNetXUnitCliVer)" />
         <PackageReference Include="MySql.Data" Version="6.10.7" />
+        <PackageReference Include="OpenTelemetry" Version="1.1.0-beta3" />
     </ItemGroup>
 
     <ItemGroup>
