--- a/.github/workflows/dotnet-core-cov.yml
+++ b/.github/workflows/dotnet-core-cov.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-            
+
     - name: Install dependencies
       run: dotnet restore
 
@@ -31,7 +31,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: dotnet test
-      run: dotnet test --collect:"Code Coverage" --results-directory:"TestResults" --configuration Release --no-build -- RunConfiguration.DisableAppDomain=true
+      run: dotnet test **/bin/**/*.Tests.dll --collect:"Code Coverage" --results-directory:"TestResults" --configuration Release --no-build -- RunConfiguration.DisableAppDomain=true
 
     - name: Process code coverage
       run: .\build\process-codecoverage.ps1
@@ -39,7 +39,7 @@ jobs:
 
     - name: Install report tool
       run: dotnet tool install -g dotnet-reportgenerator-globaltool
-    
+
     - name: Merging test results
       run: reportgenerator -reports:TestResults/**/*.xml -targetdir:TestResults -reporttypes:Cobertura
 
