--- a/src/OpenTelemetry.Contrib.Instrumentation.Quartz/OpenTelemetry.Contrib.Instrumentation.Quartz.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Quartz/OpenTelemetry.Contrib.Instrumentation.Quartz.csproj
@@ -7,7 +7,7 @@
     <TargetFrameworks>net461;net472;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry.Api" Version="1.0.1" />
+    <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-beta4" />
   </ItemGroup>
     
 </Project>
