--- a/test/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests.csproj
@@ -10,7 +10,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPkgVer)" />
         <PackageReference Include="Moq" Version="$(MoqPkgVer)" />
-        <PackageReference Include="OpenTelemetry" Version="1.0.1" />
+        <PackageReference Include="OpenTelemetry" Version="1.1.0-beta4" />
         <PackageReference Include="Quartz" Version="3.3.2" />
         <PackageReference Include="xunit" Version="$(XUnitPkgVer)" />
         <PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="xunit.runner.visualstudio" Version="$(XUnitRunnerVisualStudioPkgVer)">
