--- a/test/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests/OpenTelemetry.Contrib.Instrumentation.Quartz.Tests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <Description>Unit test project for OpenTelemetry Quartz.NET instrumentation</Description>
-        <TargetFrameworks>netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
         <IncludeSharedTestSource>true</IncludeSharedTestSource>
     </PropertyGroup>
 
