--- a/test/OpenTelemetry.Contrib.Extensions.AzureMonitor.Tests/OpenTelemetry.Contrib.Extensions.AzureMonitor.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Extensions.AzureMonitor.Tests/OpenTelemetry.Contrib.Extensions.AzureMonitor.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\OpenTelemetry.Contrib.Exporter.ApplicationInsights\OpenTelemetry.Contrib.Exporter.ApplicationInsights.csproj" />
+    <ProjectReference Include="..\..\src\OpenTelemetry.Contrib.Extensions.AzureMonitor\OpenTelemetry.Contrib.Extensions.AzureMonitor.csproj" />
   </ItemGroup>
 
 </Project>
