--- a/src/OpenTelemetry.Contrib.Extensions.AzureMonitor/OpenTelemetry.Contrib.Extensions.AzureMonitor.csproj
+++ b/src/OpenTelemetry.Contrib.Extensions.AzureMonitor/OpenTelemetry.Contrib.Extensions.AzureMonitor.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry" Version="1.2.0-alpha1" />
+    <PackageReference Include="OpenTelemetry" Version="[1.0.1,2.0.0)" />
   </ItemGroup>
 
 </Project>
