--- a/src/OpenTelemetry.Contrib.PersistentStorage/OpenTelemetry.Contrib.PersistentStorage.csproj
+++ b/src/OpenTelemetry.Contrib.PersistentStorage/OpenTelemetry.Contrib.PersistentStorage.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-    <PackageTags>$(PackageTags);Shared</PackageTags>
+    <Description>Persistent Storage</Description>
   </PropertyGroup>
 
   <PropertyGroup>
