--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -13,6 +13,7 @@ src/OpenTelemetry.Contrib.Instrumentation.MassTransit/                      @ope
 src/OpenTelemetry.Contrib.Instrumentation.Owin/                             @open-telemetry/dotnet-contrib-approvers @codeblanch
 src/OpenTelemetry.Contrib.Instrumentation.Wcf/                              @open-telemetry/dotnet-contrib-approvers @codeblanch
 src/OpenTelemetry.Contrib.Instrumentation.MySqlData/                        @open-telemetry/dotnet-contrib-approvers @moonheart
+src/OpenTelemetry.Contrib.PersistentStorage/                                @open-telemetry/dotnet-contrib-approvers @vishweshbankwar
 src/OpenTelemetry.Contrib.Preview/                                          @open-telemetry/dotnet-contrib-approvers @codeblanch
 
 test/OpenTelemetry.Contrib.Exporter.Stackdriver.Tests/                      @open-telemetry/dotnet-contrib-approvers @SergeyKanzhelev
@@ -24,4 +25,5 @@ test/OpenTelemetry.Contrib.Instrumentation.MassTransit.Tests/               @ope
 test/OpenTelemetry.Contrib.Instrumentation.Owin.Tests/                      @open-telemetry/dotnet-contrib-approvers @codeblanch
 test/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests/                       @open-telemetry/dotnet-contrib-approvers @codeblanch
 test/OpenTelemetry.Contrib.Instrumentation.MySqlData.Tests/                 @open-telemetry/dotnet-contrib-approvers @moonheart
+src/OpenTelemetry.Contrib.PersistentStorage.Tests/                          @open-telemetry/dotnet-contrib-approvers @vishweshbankwar
 test/OpenTelemetry.Contrib.Preview.Tests/                                   @open-telemetry/dotnet-contrib-approvers @codeblanch
