--- a/test/OpenTelemetry.Contrib.PersistentStorage.Tests/OpenTelemetry.Contrib.PersistentStorage.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.PersistentStorage.Tests/OpenTelemetry.Contrib.PersistentStorage.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPkgVer)" />
     <PackageReference Include="xunit" Version="$(XUnitPkgVer)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XUnitRunnerVisualStudioPkgVer)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
