--- a/src/OpenTelemetry.Contrib.PersistentStorage/OpenTelemetry.Contrib.PersistentStorage.csproj
+++ b/src/OpenTelemetry.Contrib.PersistentStorage/OpenTelemetry.Contrib.PersistentStorage.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-    <Description>Persistent Storage</Description>
+    <Description>OpenTelemetry Persistent Storage</Description>
+    <MinVerTagPrefix>PersistentStorage-</MinVerTagPrefix>
   </PropertyGroup>
 
   <PropertyGroup>
