--- a/src/OpenTelemetry.Contrib.EventCounterListener/OpenTelemetry.Contrib.EventCounterListener.csproj
+++ b/src/OpenTelemetry.Contrib.EventCounterListener/OpenTelemetry.Contrib.EventCounterListener.csproj
@@ -5,20 +5,11 @@
         <Description>OpenTelemetry Metrics instrumentation for Dotnet EventCounters</Description>
         <PackageTags>$(PackageTags);metrics;eventcounter</PackageTags>
         <MinVerTagPrefix>EventCounterListener-</MinVerTagPrefix>
+        <IncludeSharedInstrumentationSource>true</IncludeSharedInstrumentationSource>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="OpenTelemetry.Api" Version="1.2.0-rc1" />
     </ItemGroup>
-
-    <ItemGroup>
-        <Compile Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Shared\Api\SemanticConventions.cs" Link="Includes\SemanticConventions.cs" />
-        <Compile Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Shared\Api\IActivityEnumerator.cs" Link="Includes\IActivityEnumerator.cs" />
-        <Compile Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Shared\Api\ActivityHelperExtensions.cs" Link="Includes\ActivityHelperExtensions.cs" />
-        <Compile Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Shared\Api\EnumerationHelper.cs" Link="Includes\EnumerationHelper.cs" />
-        <Compile Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Shared\Api\SpanAttributeConstants.cs" Link="Includes\SpanAttributeConstants.cs" />
-        <Compile Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Shared\Api\StatusHelper.cs" Link="Includes\StatusHelper.cs" />
-    </ItemGroup>
-
 
 </Project>
